--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" >
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <title>Food 24/7</title>
 </head>
 <body>
@@ -16,21 +14,25 @@
         <div class="logo rlt"><span>F</span>ood <span>24</span>/7 <br><span>Bring the world to you</span> </div>
     </header>
 
-    <!-- bill -->
-    <div class="cart">
-        <table>
-            <tr>
-                <th style="width: 150px;">Tên SP</th>
-                <th style="width: 100px;">Số lượng</th>
-                <th style="width: 200px;">Thành tiền</th>
-                <th> <button class="btn-exit" onclick="exit()">x</button></th>
-            </tr>
-            <tbody id="my-cart">
-                
-            </tbody>
-        </table>
+    <!-- cart icon -->
+    <div class="cart-icon">
+        <span class="material-icons">
+            shopping_cart
+        </span>
+        <span id="count"></span>
+        <div class="cart">
+            <table style="margin: 10px 0;">
+                <tr>
+                    <th style="width: 150px;">Tên SP</th>
+                    <th style="width: 100px;">Số lượng</th>
+                    <th style="width: 200px;">Thành tiền</th>
+                </tr>
+                <tbody id="my-cart">
+                    
+                </tbody>
+            </table>
+        </div>
     </div>
-
     <!-- main -->
     <main >
         <div class="main-content">
